--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 
   "name": "node-rfc",
   "description": "nodejs bindings for SAP NW RFC Library",
-  "version": "0.1.3",
+  "version": "0.1.4",
 
   "repository": {
     "type": "git",
@@ -51,6 +51,7 @@
   "files": [
     "index.js",
     "LICENSE",
+    "CHANGES",
     "build/win32_x64/rfc.node",
     "build/linux_x64/rfc.node"
   ]
