--- a/.gitignore
+++ b/.gitignore
@@ -6,18 +6,10 @@
 *.iml
 *.exp
 *.lib
+*.swp
 .deps
 obj.target
+build
 node_modules
 doc/_build
-.deps
-build/.vs
-build/**.*/*.exp
-build/**.*/*.lib
-build/**.*/*.map
-build/*.vcxproj
-build/*.vcxproj.*
-build/Release/*.pdb
-build/Release/.deps
-build/Release/obj
-build/Release/obj.*
+
