--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-rfc",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "nodejs bindings for SAP NW RFC Library",
   "main": "index.js",
   "directories": {
@@ -8,23 +8,32 @@
     "test": "test"
   },
   "dependencies": {
-    "nan": "^2.4.0"
+    "nan": "^2.4.0",
+    "node-pre-gyp": "0.6.32"
   },
   "devDependencies": {
     "mocha": "^3.1.2",
-    "node-gyp": "^3.4.0",
-    "should": "^11.1.1"
+    "should": "^11.1.1",
+		"node-pre-gyp-github": "1.3.1",
+		"github": "0.2.4"
   },
   "scripts": {
     "test": "mocha",
-    "install": "node-gyp configure build"
+    "preinstall": "npm install node-pre-gyp",
+    "install": "node-pre-gyp install --fallback-to-build"
+  },
+  "binary": {
+		"module_name": "rfc",
+		"module_path": "./build/rfc",
+		"host": "https://github.com/sap/node-rfc/releases/download/",
+		"remote_path": "{version}"
   },
   "engines": {
     "node": ">= 4"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SAP/node-rfc.git"
+    "url": "git+https://github.wdf.sap.corp/D067587/node-rfc.git"
   },
   "keywords": [
     "sap",
