--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "dependencies": {
     "nan": "^2.4.0",
-    "node-pre-gyp": "0.6.32"
+    "node-pre-gyp": "^0.6.38"
   },
   "devDependencies": {
     "mocha": "^3.1.2",
     "should": "^11.1.1",
-		"node-pre-gyp-github": "1.3.1",
-		"github": "0.2.4"
+    "node-pre-gyp-github": "1.3.1",
+    "github": "0.2.4"
   },
   "scripts": {
     "test": "mocha",
@@ -23,14 +23,20 @@
     "install": "node-pre-gyp install --fallback-to-build"
   },
   "binary": {
-		"module_name": "rfc",
-		"module_path": "./build/rfc",
-		"host": "https://github.com/sap/node-rfc/releases/download/",
-		"remote_path": "{version}"
+    "module_name": "rfc",
+    "module_path": "./build/rfc",
+    "host": "https://github.com/sap/node-rfc/releases/download/",
+    "remote_path": "{version}"
   },
   "engines": {
-    "node": ">= 4"
+    "node": "4.x || 6.x"
   },
+  "os": [
+    "!darwin"
+  ],
+  "cpu": [
+    "!arm"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.wdf.sap.corp/D037732/node-rfc.git"
