--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-rfc",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "description": "nodejs bindings for SAP NW RFC Library",
   "main": "index.js",
   "directories": {
@@ -8,14 +8,13 @@
     "test": "test"
   },
   "dependencies": {
-    "nan": "^2.7.0",
-    "node-pre-gyp": "^0.6.39"
+    "nan": "^2.10.0",
+    "node-pre-gyp": "^0.8.0"
   },
   "devDependencies": {
-    "mocha": "^3.5.3",
-    "should": "^11.2.1",
-    "node-pre-gyp-github": "1.3.1",
-    "github": "0.2.4"
+    "mocha": "^5.0.5",
+    "should": "^13.1.3",
+    "node-abi": "^2.3.0"
   },
   "scripts": {
     "test": "mocha",
