--- a/package.json
+++ b/package.json
@@ -1,73 +1,74 @@
 {
-	"name": "node-rfc",
-	"description": "nodejs bindings for SAP NW RFC SDK",
-	"version": "0.0.1",
-	"homepage": "https://github.wdf.sap.corp/D037732/node-rfc",
-	"author": {
-		"name": "Srdjan Boskovic",
-		"email": "srdjan.boskovic@sap.com"
-	},
-	"engines": {
-		"node": "4.x || 6.x || 8.x || 9.x"
-	},
-	"os": [
-		"!darwin"
-	],
-	"cpu": [
-		"!arm"
-	],
-	"directories": {
-		"doc": "doc",
-		"test": "test"
-	},
-	"scripts": {
-		"prepublishOnly": "npm ls",
-		"preinstall": "npm install node-pre-gyp node-addon-api",
-		"install": "node-pre-gyp install --fallback-to-build",
-		"test": "mocha"
-	},
-	"binary": {
-		"module_name": "sapnwrfc",
-		"module_path": "./lib/binding/{node_abi}-{platform}-{arch}",
-		"host": "https://github.wdf.sap.corp/D037732/node-rfc/releases/download/",
-		"remote_path": "{version}",
-		"package_name": "rfc-{node_abi}-{platform}-{arch}.tar.gz"
-	},
-	"license": "Apache-2.0",
-	"keywords": [
-		"sap",
-		"rfc",
-		"rfc sdk",
-		"sapnwrfc",
-		"sapnw",
-		"node",
-		"nodejs"
-	],
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.wdf.sap.corp/D037732/node-rfc.git"
-	},
-	"dependencies": {
-		"current-git-branch": "^1.0.1",
-		"node-addon-api": "^1.3.0",
-		"node-pre-gyp": "^0.10.0"
-	},
-	"bundledDependencies": [
-		"node-pre-gyp"
-	],
-	"devDependencies": {
-		"decimal.js": "^10.0.0",
-		"eslint": "^4.19.1",
-		"eslint-plugin-mocha": "^5.0.0",
-		"mocha": "^5.1.1",
-		"node-abi": "^2.4.1",
-		"node-gyp": "^3.6.2",
-		"prettier-eslint": "^8.8.1",
-		"should": "^13.2.1"
-	},
-	"files": [
-		"lib"
-	],
-	"gypfile": true,
-	"main": "./lib/sapnwrfc"
+  "name": "node-rfc",
+  "description": "nodejs bindings for SAP NW RFC SDK",
+  "version": "0.0.1",
+  "homepage": "https://github.wdf.sap.corp/D037732/node-rfc",
+  "author": {
+    "name": "Srdjan Boskovic",
+    "email": "srdjan.boskovic@sap.com"
+  },
+  "engines": {
+    "node": "6.x || 8.x || 10.x"
+  },
+  "os": [
+    "!darwin"
+  ],
+  "cpu": [
+    "!arm"
+  ],
+  "directories": {
+    "doc": "doc",
+    "test": "test"
+  },
+  "scripts": {
+    "prepublishOnly": "npm ls",
+    "preinstall": "npm install node-pre-gyp node-addon-api",
+    "install": "node-pre-gyp install --fallback-to-build",
+    "test": "mocha"
+  },
+  "binary": {
+    "module_name": "sapnwrfc",
+    "module_path": "./lib/binding/{node_abi}-{platform}-{arch}",
+    "host": "https://github.wdf.sap.corp/D037732/node-rfc/releases/download/",
+    "remote_path": "{version}",
+    "package_name": "rfc-{node_abi}-{platform}-{arch}.tar.gz"
+  },
+  "license": "Apache-2.0",
+  "keywords": [
+    "sap",
+    "rfc",
+    "rfc sdk",
+    "sapnwrfc",
+    "sapnw",
+    "node",
+    "nodejs"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.wdf.sap.corp/D037732/node-rfc.git"
+  },
+  "dependencies": {
+    "node-addon-api": "^1.3.0",
+    "node-pre-gyp": "^0.10.0"
+  },
+  "bundledDependencies": [
+    "node-pre-gyp"
+  ],
+  "devDependencies": {
+    "bluebird": "^3.5.1",
+    "current-git-branch": "^1.0.1",
+    "decimal.js": "^10.0.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-mocha": "^5.0.0",
+    "mocha": "^5.1.1",
+    "node-abi": "^2.4.1",
+    "node-gyp": "^3.6.2",
+    "prettier-eslint": "^8.8.1",
+    "should": "^13.2.1"
+  },
+  "files": [
+    "lib"
+  ],
+  "gypfile": true,
+  "main": "./lib/sapnwrfc"
 }
