--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"prepublishOnly": "npm ls",
 		"preinstall": "npm install node-pre-gyp node-addon-api",
 		"install": "node-pre-gyp install --fallback-to-build",
-		"test": "mocha"
+		"test": "mocha",
+		"buildWrapper": "tsc -p src/wrapper"
 	},
 	"binary": {
 		"module_name": "sapnwrfc",
@@ -55,6 +56,7 @@
 		"node-pre-gyp"
 	],
 	"devDependencies": {
+		"@types/node": "^10.3.2",
 		"decimal.js": "^10.0.0",
 		"eslint": "^4.19.1",
 		"eslint-plugin-mocha": "^5.0.0",
@@ -62,11 +64,13 @@
 		"node-abi": "^2.4.1",
 		"node-gyp": "^3.6.2",
 		"prettier-eslint": "^8.8.1",
-		"should": "^13.2.1"
+		"should": "^13.2.1",
+		"typescript": "^2.9.1"
 	},
 	"files": [
 		"lib"
 	],
 	"gypfile": true,
-	"main": "./lib/sapnwrfc"
+	"main": "./lib/sapnwrfc-client",
+	"typings": "./lib/sapnwrfc-client.d.ts"
 }
