Exceptions, tests, versions

--- a/src/ts/tsconfig.json
+++ b/src/ts/tsconfig.json
@@ -12,7 +12,7 @@
 		"listFiles": true,
 		"removeComments": true,
 		"lib": ["es2015"],
-		"outDir": "../../lib/wrapper"
+		"outDir": "../../lib/js"
 	},
 	"files": ["sapnwrfc-client.ts"],
 	"exclude": ["node_modules", "dist", "build", "doc", "lib", "test", ".vscode"],
