--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "node-rfc",
 	"description": "nodejs bindings for SAP NW RFC SDK",
-	"version": "0.0.1",
+	"version": "0.2.0-rc1",
 	"homepage": "https://github.wdf.sap.corp/D037732/node-rfc",
 	"author": {
 		"name": "Srdjan Boskovic",
@@ -25,7 +25,7 @@
 		"preinstall": "npm install node-pre-gyp node-addon-api",
 		"install": "node-pre-gyp install --fallback-to-build",
 		"test": "mocha",
-		"buildWrapper": "tsc -p src/wrapper"
+		"tsbuild": "tsc -p src/ts"
 	},
 	"binary": {
 		"module_name": "sapnwrfc",
@@ -71,6 +71,6 @@
 		"lib"
 	],
 	"gypfile": true,
-	"main": "./lib/sapnwrfc-client",
-	"typings": "./lib/sapnwrfc-client.d.ts"
+	"main": "./lib/js/sapnwrfc-client",
+	"typings": "./lib/js/sapnwrfc-client.d.ts"
 }
