--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"url": "git+https://github.wdf.sap.corp/D037732/node-rfc.git"
 	},
 	"dependencies": {
+		"aws-sdk": "^2.257.1",
 		"node-addon-api": "^1.3.0",
 		"node-pre-gyp": "^0.10.0"
 	},
