--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "node-rfc",
 	"description": "nodejs bindings for SAP NW RFC SDK",
-	"version": "0.2.0-rc1",
+	"version": "0.2.0-rc2",
 	"homepage": "https://github.wdf.sap.corp/D037732/node-rfc",
 	"author": {
 		"name": "Srdjan Boskovic",
@@ -10,12 +10,8 @@
 	"engines": {
 		"node": "6.x || 8.x || 10.x"
 	},
-	"os": [
-		"!darwin"
-	],
-	"cpu": [
-		"!arm"
-	],
+	"os": ["!darwin"],
+	"cpu": ["!arm"],
 	"directories": {
 		"doc": "doc",
 		"test": "test"
@@ -25,7 +21,7 @@
 		"preinstall": "npm install node-pre-gyp node-addon-api",
 		"install": "node-pre-gyp install --fallback-to-build",
 		"test": "mocha",
-		"tsbuild": "tsc -p src/ts"
+		"build": "tsc -p src/ts"
 	},
 	"binary": {
 		"module_name": "sapnwrfc",
@@ -35,15 +31,7 @@
 		"package_name": "rfc-{node_abi}-{platform}-{arch}.tar.gz"
 	},
 	"license": "Apache-2.0",
-	"keywords": [
-		"sap",
-		"rfc",
-		"rfc sdk",
-		"sapnwrfc",
-		"sapnw",
-		"node",
-		"nodejs"
-	],
+	"keywords": ["sap", "rfc", "rfc sdk", "sapnwrfc", "sapnw", "node", "nodejs"],
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.wdf.sap.corp/D037732/node-rfc.git"
@@ -53,9 +41,7 @@
 		"node-addon-api": "^1.3.0",
 		"node-pre-gyp": "^0.10.0"
 	},
-	"bundledDependencies": [
-		"node-pre-gyp"
-	],
+	"bundledDependencies": ["node-pre-gyp"],
 	"devDependencies": {
 		"@types/node": "^10.3.2",
 		"decimal.js": "^10.0.0",
@@ -68,10 +54,8 @@
 		"should": "^13.2.1",
 		"typescript": "^2.9.1"
 	},
-	"files": [
-		"lib"
-	],
+	"files": ["lib"],
 	"gypfile": true,
 	"main": "./lib/js/sapnwrfc-client",
-	"typings": "./lib/js/sapnwrfc-client.d.ts"
+	"types": "./lib/js/sapnwrfc-client.d.ts"
 }
