--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
 	"engines": {
 		"node": "6.x || 8.x || 10.x"
 	},
-	"os": ["!darwin"],
-	"cpu": ["!arm"],
+	"os": [
+		"!darwin"
+	],
+	"cpu": [
+		"!arm"
+	],
 	"directories": {
 		"doc": "doc",
 		"test": "test"
@@ -31,7 +35,15 @@
 		"package_name": "rfc-{node_abi}-{platform}-{arch}.tar.gz"
 	},
 	"license": "Apache-2.0",
-	"keywords": ["sap", "rfc", "rfc sdk", "sapnwrfc", "sapnw", "node", "nodejs"],
+	"keywords": [
+		"sap",
+		"rfc",
+		"rfc sdk",
+		"sapnwrfc",
+		"sapnw",
+		"node",
+		"nodejs"
+	],
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.wdf.sap.corp/D037732/node-rfc.git"
@@ -41,7 +53,9 @@
 		"node-addon-api": "^1.3.0",
 		"node-pre-gyp": "^0.10.0"
 	},
-	"bundledDependencies": ["node-pre-gyp"],
+	"bundledDependencies": [
+		"node-pre-gyp"
+	],
 	"devDependencies": {
 		"@types/node": "^10.3.2",
 		"decimal.js": "^10.0.0",
@@ -54,7 +68,9 @@
 		"should": "^13.2.1",
 		"typescript": "^2.9.1"
 	},
-	"files": ["lib"],
+	"files": [
+		"lib"
+	],
 	"gypfile": true,
 	"main": "./lib/js/sapnwrfc-client",
 	"types": "./lib/js/sapnwrfc-client.d.ts"
