--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
 		"url": "git+https://github.wdf.sap.corp/D037732/node-rfc.git"
 	},
 	"dependencies": {
-		"aws-sdk": "^2.257.1",
 		"node-addon-api": "^1.3.0",
 		"node-pre-gyp": "^0.10.0"
 	},
@@ -57,21 +56,19 @@
 		"node-pre-gyp"
 	],
 	"devDependencies": {
-		"@types/node": "^10.3.2",
-		"decimal.js": "^10.0.0",
+		"@types/node": "^10.3.4",
+		"decimal.js": "^10.0.1",
 		"eslint": "^4.19.1",
 		"eslint-plugin-mocha": "^5.0.0",
-		"mocha": "^5.1.1",
-		"node-abi": "^2.4.1",
-		"node-gyp": "^3.6.2",
+		"mocha": "^5.2.0",
 		"prettier-eslint": "^8.8.1",
 		"should": "^13.2.1",
-		"typescript": "^2.9.1"
+		"typescript": "^2.9.2"
 	},
 	"files": [
 		"lib"
 	],
 	"gypfile": true,
-	"main": "./lib/js/sapnwrfc-client",
-	"types": "./lib/js/sapnwrfc-client.d.ts"
+	"main": "./lib/index",
+	"types": "./lib/index.d.ts"
 }
