--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "node-rfc",
 	"description": "nodejs bindings for SAP NW RFC SDK",
-	"version": "0.2.0-rc2",
+	"version": "0.2.0-rc3",
 	"homepage": "https://github.wdf.sap.corp/D037732/node-rfc",
 	"author": {
 		"name": "Srdjan Boskovic",
@@ -25,7 +25,7 @@
 		"preinstall": "npm install node-pre-gyp node-addon-api",
 		"install": "node-pre-gyp install --fallback-to-build",
 		"test": "mocha",
-		"build": "tsc -p src/ts"
+		"build": "tsc -p src/ts -p samples/readme"
 	},
 	"binary": {
 		"module_name": "sapnwrfc",
@@ -56,7 +56,10 @@
 		"node-pre-gyp"
 	],
 	"devDependencies": {
+		"@babel/core": "^7.0.0-beta.51",
+		"@babel/preset-env": "^7.0.0-beta.51",
 		"@types/node": "^10.3.4",
+		"babel-cli": "^6.26.0",
 		"decimal.js": "^10.0.1",
 		"eslint": "^4.19.1",
 		"eslint-plugin-mocha": "^5.0.0",
