--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"eslint": "^4.19.1",
 		"eslint-plugin-mocha": "^5.0.0",
 		"mocha": "^5.2.0",
+		"node-gyp": "^3.7.0",
 		"prettier-eslint": "^8.8.1",
 		"should": "^13.2.1",
 		"typescript": "^2.9.2"
