--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.swp
 .deps
 obj.target
-build
+build/
 node_modules/
 doc/_build/
 release/
@@ -17,3 +17,6 @@ lib/binding/
 test/*.txt
 test/*.log
 samples/dist*
+samples/issues/trace/
+issues/
+examples/dist/
