--- a/package.json
+++ b/package.json
@@ -60,14 +60,15 @@
 		"node-pre-gyp"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.0.0-beta.51",
-		"@types/node": "^10.3.4",
+		"@babel/core": "^7.0.0-beta.54",
+		"@types/node": "^10.5.3",
+		"aws-sdk": "^2.280.1",
 		"decimal.js": "^10.0.1",
 		"eslint": "^4.19.1",
-		"eslint-plugin-mocha": "^5.0.0",
+		"eslint-plugin-mocha": "^5.1.0",
 		"mocha": "^5.2.0",
 		"node-gyp": "^3.7.0",
-		"prettier-eslint": "^8.8.1",
+		"prettier-eslint": "^8.8.2",
 		"should": "^13.2.1",
 		"typescript": "^2.9.2"
 	},
