npm dep removed

--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
 		"@types/bluebird": "^3.5.23",
 		"bluebird": "^3.5.1",
 		"node-addon-api": "^1.4.0",
-		"node-pre-gyp": "^0.10.3",
-		"npm": "^6.4.0"
+		"node-pre-gyp": "^0.10.3"
 	},
 	"bundledDependencies": [
 		"node-pre-gyp"
