--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
 		"node": "6.x || 8.x || 10.x",
 		"npm": "^6.2.0"
 	},
-	"os": [
-		"!darwin"
-	],
 	"cpu": [
 		"!arm"
 	],
@@ -53,7 +50,7 @@
 	"dependencies": {
 		"@types/bluebird": "^3.5.23",
 		"bluebird": "^3.5.1",
-		"node-addon-api": "^1.4.0",
+		"node-addon-api": "^1.5.0",
 		"node-pre-gyp": "^0.11.0"
 	},
 	"bundledDependencies": [
@@ -62,13 +59,15 @@
 	"devDependencies": {
 		"@babel/core": "^7.0.0-beta.54",
 		"@types/node": "^10.5.4",
+		"acorn": "^6.0.2",
 		"compare-versions": "^3.3.0",
 		"decimal.js": "^10.0.1",
-		"eslint": "^5.2.0",
+		"eslint": "^5.7.0",
 		"eslint-plugin-mocha": "^5.1.0",
 		"mocha": "^5.2.0",
 		"node-gyp": "^3.8.0",
 		"prettier-eslint": "^8.8.2",
+		"random-bytes": "^1.0.0",
 		"should": "^13.2.2",
 		"typescript": "^2.9.2"
 	},
