--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"email": "srdjan.boskovic@sap.com"
 	},
 	"engines": {
-		"node": "6.x || 8.x || 10.x",
+		"node": "8.x || 10.x",
 		"npm": "^6.2.0"
 	},
 	"cpu": [
