--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"email": "srdjan.boskovic@sap.com"
 	},
 	"engines": {
-		"node": "8.x || 10.x || 11.x",
+		"node": "6.x || 8.x || 10.x || 11.x",
 		"npm": "^6.2.0"
 	},
 	"cpu": [
@@ -61,5 +61,21 @@
 		"bluebird": "^3.5.2",
 		"node-addon-api": "^1.5.0",
 		"node-pre-gyp": "^0.11.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.1.2",
+		"@types/node": "^10.12.1",
+		"acorn": "^6.0.2",
+		"aws-sdk": "^2.344.0",
+		"compare-versions": "^3.4.0",
+		"decimal.js": "^10.0.1",
+		"eslint": "^5.8.0",
+		"eslint-plugin-mocha": "^5.2.0",
+		"mocha": "^5.2.0",
+		"node-gyp": "^3.8.0",
+		"prettier-eslint": "^8.8.2",
+		"random-bytes": "^1.0.0",
+		"should": "^13.2.3",
+		"typescript": "^3.1.4"
 	}
 }
