--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "node-rfc",
 	"description": "nodejs bindings for SAP NW RFC SDK",
-	"version": "1.0.0-rc5",
+	"version": "1.0.0-rc6",
 	"homepage": "https://github.com/SAP/node-rfc",
 	"author": {
 		"name": "Srdjan Boskovic",
@@ -57,24 +57,25 @@
 	"main": "./lib/index.js",
 	"types": "./lib/index.d.ts",
 	"dependencies": {
-		"@babel/core": "^7.1.2",
 		"@types/bluebird": "^3.5.24",
-		"@types/node": "^10.12.2",
+		"bluebird": "^3.5.3",
+		"node-addon-api": "^1.6.2",
+		"node-pre-gyp": "^0.12.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.2.0",
+		"@types/node": "^10.12.12",
 		"acorn": "^6.0.4",
-		"aws-sdk": "^2.349.0",
-		"bluebird": "^3.5.2",
+		"aws-sdk": "^2.370.0",
 		"compare-versions": "^3.4.0",
 		"decimal.js": "^10.0.1",
-		"eslint": "^5.8.0",
+		"eslint": "^5.9.0",
 		"eslint-plugin-mocha": "^5.2.0",
 		"mocha": "^5.2.0",
-		"node-addon-api": "^1.6.0",
 		"node-gyp": "^3.8.0",
-		"node-pre-gyp": "^0.11.0",
 		"prettier-eslint": "^8.8.2",
 		"random-bytes": "^1.0.0",
 		"should": "^13.2.3",
-		"typescript": "^3.1.6"
-	},
-	"devDependencies": {}
+		"typescript": "^3.2.1"
+	}
 }
