--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "node-rfc",
 	"description": "nodejs bindings for SAP NW RFC SDK",
-	"version": "1.0.0-rc7",
+	"version": "1.0.0-rc8",
 	"homepage": "https://github.com/SAP/node-rfc",
 	"author": {
 		"name": "Srdjan Boskovic",
@@ -76,6 +76,7 @@
 	},
 	"dependencies": {
 		"@types/bluebird": "^3.5.24",
+		"ajv": "^5.5.2",
 		"bluebird": "^3.5.3",
 		"node-addon-api": "^1.6.2",
 		"node-pre-gyp": "^0.12.0"
