--- a/package.json
+++ b/package.json
@@ -1,84 +1,85 @@
 {
-	"name": "node-rfc",
-	"description": "nodejs bindings for SAP NW RFC SDK",
-	"version": "1.0.0-rc8",
-	"homepage": "https://github.com/SAP/node-rfc",
-	"author": {
-		"name": "Srdjan Boskovic",
-		"email": "srdjan.boskovic@sap.com"
-	},
-	"engines": {
-		"node": "6.x || 8.x || 10.x || 11.x",
-		"npm": "^6.2.0"
-	},
-	"cpu": [
-		"!arm"
-	],
-	"directories": {
-		"doc": "doc",
-		"test": "test"
-	},
-	"scripts": {
-		"prepublishOnly": "npm ls",
-		"preinstall": "npm install node-pre-gyp node-addon-api",
-		"install": "node-pre-gyp install --fallback-to-build",
-		"test": "bash test/test.sh",
-		"wrapper": "tsc -p src/ts",
-		"examples": "tsc -p examples/ts",
-		"install:dev": "npm i --save-dev @babel/core @types/node acorn aws-sdk compare-versions decimal.js eslint eslint-plugin-mocha mocha node-gyp prettier-eslint random-bytes should typescript",
-		"install:prod": "npm i --save @types/bluebird bluebird node-addon-api node-pre-gyp"
-	},
-	"binary": {
-		"module_name": "sapnwrfc",
-		"module_path": "./lib/binding/{platform}-{arch}-{node_abi}",
-		"host": "https://github.com/SAP/node-rfc/releases/download/",
-		"remote_path": "{version}",
-		"package_name": "rfc-{platform}-{arch}-{node_abi}.tar.gz"
-	},
-	"license": "Apache-2.0",
-	"keywords": [
-		"sap",
-		"rfc",
-		"rfc sdk",
-		"sapnwrfc",
-		"sapnw",
-		"node",
-		"nodejs"
-	],
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/SAP/node-rfc.git"
-	},
-	"bundledDependencies": [
-		"node-pre-gyp"
-	],
-	"files": [
-		"lib"
-	],
-	"gypfile": true,
-	"main": "./lib/index.js",
-	"types": "./lib/index.d.ts",
-	"devDependencies": {
-		"@babel/core": "^7.2.0",
-		"@types/node": "^10.12.12",
-		"acorn": "^6.0.4",
-		"aws-sdk": "^2.373.0",
-		"compare-versions": "^3.4.0",
-		"decimal.js": "^10.0.1",
-		"eslint": "^5.10.0",
-		"eslint-plugin-mocha": "^5.2.0",
-		"mocha": "^5.2.0",
-		"node-gyp": "^3.8.0",
-		"prettier-eslint": "^8.8.2",
-		"random-bytes": "^1.0.0",
-		"should": "^13.2.3",
-		"typescript": "^3.2.2"
-	},
-	"dependencies": {
-		"@types/bluebird": "^3.5.24",
-		"ajv": "^5.5.2",
-		"bluebird": "^3.5.3",
-		"node-addon-api": "^1.6.2",
-		"node-pre-gyp": "^0.12.0"
-	}
+  "name": "node-rfc",
+  "description": "nodejs bindings for SAP NW RFC SDK",
+  "version": "1.0.0-rc8",
+  "homepage": "https://github.com/SAP/node-rfc",
+  "author": {
+    "name": "Srdjan Boskovic",
+    "email": "srdjan.boskovic@sap.com"
+  },
+  "engines": {
+    "node": "6.x || 8.x || 10.x || 11.x",
+    "npm": "^6.2.0"
+  },
+  "cpu": [
+    "!arm"
+  ],
+  "directories": {
+    "doc": "doc",
+    "test": "test"
+  },
+  "scripts": {
+    "prepublishOnly": "npm ls",
+    "preinstall": "npm install node-pre-gyp node-addon-api",
+    "install": "node-pre-gyp install --fallback-to-build",
+    "build": "source test/build.sh",
+    "test": "source test/test.sh",
+    "wrapper": "tsc -p src/ts",
+    "examples": "tsc -p examples/ts",
+    "install:dev": "npm i --save-dev @babel/core @types/node acorn aws-sdk compare-versions decimal.js eslint eslint-plugin-jest jest node-gyp prettier-eslint random-bytes typescript",
+    "install:prod": "npm i --save @types/bluebird bluebird node-addon-api node-pre-gyp"
+  },
+  "binary": {
+    "module_name": "sapnwrfc",
+    "module_path": "./lib/binding/{platform}-{arch}-{node_abi}",
+    "host": "https://github.com/SAP/node-rfc/releases/download/",
+    "remote_path": "{version}",
+    "package_name": "rfc-{platform}-{arch}-{node_abi}.tar.gz"
+  },
+  "license": "Apache-2.0",
+  "keywords": [
+    "sap",
+    "rfc",
+    "rfc sdk",
+    "sapnwrfc",
+    "sapnw",
+    "node",
+    "nodejs"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SAP/node-rfc.git"
+  },
+  "bundledDependencies": [
+    "node-pre-gyp"
+  ],
+  "files": [
+    "lib"
+  ],
+  "gypfile": true,
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^10.14.4",
+    "acorn": "^6.1.1",
+    "aws-sdk": "^2.437.0",
+    "compare-versions": "^3.4.0",
+    "decimal.js": "^10.1.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-jest": "^22.4.1",
+    "jest": "^24.7.1",
+    "node-gyp": "^3.8.0",
+    "prettier-eslint": "^8.8.2",
+    "random-bytes": "^1.0.0",
+    "typescript": "^3.4.3"
+  },
+  "dependencies": {
+    "@types/bluebird": "^3.5.26",
+    "ajv": "^5.5.2",
+    "bluebird": "^3.5.4",
+    "node-addon-api": "^1.6.3",
+    "node-pre-gyp": "^0.12.0"
+  }
 }
