--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "install": "node-pre-gyp install --fallback-to-build",
     "wrapper": "tsc -p src/ts",
     "examples": "tsc -p examples/ts",
-    "install:dev": "npm i --save-dev @babel/core @types/node acorn aws-sdk compare-versions decimal.js eslint eslint-plugin-jest jest node-gyp prettier-eslint random-bytes typescript",
+    "install:dev": "npm i --save-dev @babel/core @types/node compare-versions decimal.js eslint eslint-plugin-jest jest node-gyp prettier-eslint random-bytes typescript",
     "install:prod": "npm i --save @types/bluebird bluebird node-addon-api node-pre-gyp"
   },
   "binary": {
@@ -60,27 +60,22 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@types/jest": "^24.0.11",
-    "@types/node": "^10.14.4",
-    "acorn": "^6.1.1",
-    "aws-sdk": "^2.437.0",
+    "@babel/core": "^7.4.4",
+    "@types/node": "^12.0.2",
     "compare-versions": "^3.4.0",
-    "decimal.js": "^10.1.1",
+    "decimal.js": "^10.2.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-jest": "^22.4.1",
-    "jest": "^24.7.1",
-    "node-gyp": "^3.8.0",
+    "eslint-plugin-jest": "^22.5.1",
+    "jest": "^24.8.0",
+    "node-gyp": "^4.0.0",
     "prettier-eslint": "^8.8.2",
     "random-bytes": "^1.0.0",
-    "tar": ">=4.4.2",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.5"
   },
   "dependencies": {
     "@types/bluebird": "^3.5.26",
-    "ajv": "^5.5.2",
     "bluebird": "^3.5.4",
     "node-addon-api": "^1.6.3",
-    "node-pre-gyp": "^0.12.0"
+    "node-pre-gyp": "^0.13.0"
   }
 }
