--- a/.editorconfig
+++ b/.editorconfig
@@ -14,13 +14,11 @@ charset = utf-8
 # trim trailing whitespace
 trim_trailing_whitespace = true
 
-[**.js]
 indent_style = space
 indent_size = 4
 
-[**.html, *.py]
-indent_style = space
-indent_size = 4
+[*.json]
+indent_size = 2
 
 [*.md]
 trim_trailing_whitespace = false
