--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-rfc",
   "description": "nodejs bindings for SAP NW RFC SDK",
-  "version": "1.0.0-rc9",
+  "version": "1.0.0-rc10",
   "homepage": "https://github.com/SAP/node-rfc",
   "author": {
     "name": "Srdjan Boskovic",
@@ -24,8 +24,8 @@
     "install": "node-pre-gyp install --fallback-to-build",
     "wrapper": "tsc -p src/ts",
     "examples": "tsc -p examples/ts",
-    "install:dev": "npm i --save-dev @babel/core @types/node compare-versions decimal.js jest node-gyp random-bytes typescript",
-    "install:prod": "npm i --save @types/bluebird bluebird node-addon-api node-pre-gyp"
+    "install:dev": "npm i --save-dev @babel/core @types/node compare-versions decimal.js jest random-bytes typescript",
+    "install:prod": "npm i --save @types/bluebird bluebird node-addon-api node-pre-gyp@0.12.0"
   },
   "binary": {
     "module_name": "sapnwrfc",
@@ -61,18 +61,18 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "devDependencies": {
-    "@types/node": "^12.0.2",
+    "@babel/core": "^7.4.5",
+    "@types/node": "^12.0.4",
     "compare-versions": "^3.4.0",
     "decimal.js": "^10.2.0",
     "jest": "^24.8.0",
-    "node-gyp": "^4.0.0",
     "random-bytes": "^1.0.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.5.1"
   },
   "dependencies": {
-    "@types/bluebird": "^3.5.26",
-    "bluebird": "^3.5.4",
+    "@types/bluebird": "^3.5.27",
+    "bluebird": "^3.5.5",
     "node-addon-api": "^1.6.3",
-    "node-pre-gyp": "^0.13.0"
+    "node-pre-gyp": "^0.12.0"
   }
 }
