--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "install": "node-pre-gyp install --fallback-to-build",
     "wrapper": "tsc -p src/ts",
     "examples": "tsc -p examples/ts",
-    "install:dev": "npm i --save-dev @babel/core @types/node compare-versions decimal.js jest random-bytes typescript",
-    "install:prod": "npm i --save @types/bluebird bluebird node-addon-api node-pre-gyp@0.12.0"
+    "install:dev": "npm i --save-dev @babel/core @types/node compare-versions decimal.js jest random-bytes typescript async",
+    "install:prod": "npm i --save @types/bluebird bluebird node-addon-api node-pre-gyp"
   },
   "binary": {
     "module_name": "sapnwrfc",
@@ -61,18 +61,19 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@types/node": "^12.0.4",
-    "compare-versions": "^3.4.0",
+    "@babel/core": "^7.5.5",
+    "@types/node": "^12.7.2",
+    "async": "^3.1.0",
+    "compare-versions": "^3.5.1",
     "decimal.js": "^10.2.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "random-bytes": "^1.0.0",
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.3"
   },
   "dependencies": {
     "@types/bluebird": "^3.5.27",
     "bluebird": "^3.5.5",
-    "node-addon-api": "^1.6.3",
-    "node-pre-gyp": "^0.12.0"
+    "node-addon-api": "^1.7.1",
+    "node-pre-gyp": "^0.13.0"
   }
 }
