--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "install": "node-pre-gyp install --fallback-to-build",
     "wrapper": "tsc -p src/ts",
     "examples": "tsc -p examples/ts",
-    "install:dev": "npm i --save-dev @babel/core @types/node compare-versions decimal.js jest random-bytes typescript async",
+    "install:dev": "npm i --save-dev @babel/core @types/node compare-versions decimal.js jest random-bytes typescript async eslint-plugin-jest",
     "install:prod": "npm i --save @types/bluebird bluebird node-addon-api node-pre-gyp"
   },
   "binary": {
@@ -66,6 +66,7 @@
     "async": "^3.1.0",
     "compare-versions": "^3.5.1",
     "decimal.js": "^10.2.0",
+    "eslint-plugin-jest": "^22.17.0",
     "jest": "^24.9.0",
     "random-bytes": "^1.0.0",
     "typescript": "^3.6.3"
