--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.lib
 *.swp
 .deps
+.buildinfo
 obj.target
 build/
 node_modules*/
@@ -19,4 +20,4 @@ examples/dist/
 ci/
 # https://github.com/Microsoft/vscode-cpptools/issues/3347
 .vscode/ipch
-.buildinfo
+prebuilds/
