--- a/.gitignore
+++ b/.gitignore
@@ -3,22 +3,22 @@
 *.trc
 *.tmp
 *.log
-.idea
 *.iml
 *.exp
 *.lib
 *.swp
 .deps
-obj.target
-build
-node_modules
-doc/_build
 .buildinfo
-_sources
-lib/binding
-issues
-release
-examples
-.prebuildrc
+obj.target
+build/
+node_modules*/
+doc/_build/
+release/
+lib/binding/
+issues/
+examples/dist/
 ci/
+# https://github.com/Microsoft/vscode-cpptools/issues/3347
+.vscode/ipch
 prebuilds/
+.prebuildrc
