Unit tests for ABAP errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,6 @@
         "stdexcept": "cpp"
     },
     "git.ignoreLimitWarning": true,
-    "terminal.integrated.rendererType": "dom"
+    "terminal.integrated.rendererType": "dom",
+    "cmake.configureOnOpen": true
 }
