nwrfcsdk version scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,6 @@
   },
   "git.ignoreLimitWarning": true,
   "terminal.integrated.rendererType": "dom",
-  "cmake.configureOnOpen": false
+  "cmake.configureOnOpen": false,
+  "restructuredtext.confPath": ""
 }
