--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,13 @@ release/
 lib/binding/
 issues/
 examples/dist/
-ci/
+ci/test
 # https://github.com/Microsoft/vscode-cpptools/issues/3347
 .vscode/ipch
 prebuilds/
 .prebuildrc
+Makefile
+cmake_install.cmake
+CMakeCache.txt
+CMakeFiles
 
