Windows build options cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,7 @@ elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
         SAPonNT
         _CRT_NON_CONFORMING_SWPRINTFS
         _CRT_SECURE_NO_DEPRECATES
+        _CRT_SECURE_NO_WARNINGS
         _CRT_NONSTDC_NO_DEPRECATE
         _AFXDLL
         WIN32
